--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "chat-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@popperjs/core": "^2.11.5",
-    "aos": "^2.3.4"
-  }
+    "name": "chat-app",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "vite": "^2.9.12"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "aos": "^2.3.4"
+    }
 }
